--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- lotti files import -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <title>Cat Fact App</title>
   </head>
   <body>
